assets/control-bar: rm control-bar__top-overlap fixes #3581

--- a/meinberlin/assets/scss/components/_control-bar.scss
+++ b/meinberlin/assets/scss/components/_control-bar.scss
@@ -63,16 +63,6 @@
     }
 }
 
-.control-bar__top-overlap {
-    position: relative;
-    z-index: 1;
-    bottom: -1.25rem;
-
-    .dropdown {
-        margin-bottom: 0;
-    }
-}
-
 .control-bar__bottom-overlap {
     position: relative;
     z-index: 1;
